--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <div class="logo-container">
         <img src="CAJA.png" alt="Logo" class="logo">
     </div>
-    <h1>Calculador Solar</h1>
+    <h1>Calculadora Solar</h1>
     <div class="containerr">
         <div class="input-container">
             <div class="column-text">
