se agregaron los meses y se refinaron algunos textos e imagenes

--- a/index.html
+++ b/index.html
@@ -89,24 +89,35 @@
     <div class="resultadok">
         KWh Anuales
     </div>
+    <h1>Potencia de paneles</h1>
     <div class="container">
         <div class="input-container">
             <div class="column-text">
-                <p>La primera referencia tomada por el hombre fue el sol, cuyo movimiento aparente, de este a oeste, determina el día y la noche, dando la impresión que el sol gira alrededor del planeta. Este movimiento “aparente” del sol respecto de la tierra puede observarse a lo largo del día y del año. En verano, el sol se encuentra en la posición más alta, por lo que los rayos solares deben atravesar una menor distancia dentro de la atmósfera, haciendo que la variación espectral sea menor a la producida en invierno, dónde el sol debe atravesar una mayor distancia. Lo mismo ocurre durante el día, cuando el sol recorre una mayor distancia al estar más cercano al horizonte (amanecer y atardecer) y una menor distancia al medio día.</p>
-            </div>
+                <p>A continuación colocar la irradiación de la zona donde vamos a instalar los paneles solares.</p>
+                  <p> En <a href="https://www.energizar.org.ar/inicio/" target="_blank" rel="noreferrer noopener">esta pagina</a> obtener la irradiación colocando la latitud y longitud del lugar.</p>
+                  <p> En deberemos saber la inclinación que vamos a usar en nuestros paneles solares para lograr un cálculo más exacto. 
+                  <p>Una ves obtenido el valor de la irradiación, podremos colocarlo aquí debajo para el calculo final.</p>
+                  <p>Una ves obtenido el valor de la irradiación, podremos colocarlo aquí debajo para el calculo final.</p>
+                  </div>
             <input type="number" id="input2" step="0.01">
             <label for="input2">Radiación Anual</label>
         </div>
         <div class="input-container">
             <div class="column-text">
-                <p>La primerasdfsdfsdfsdf referencia tomada por el hombre fue el sol, cuyo movimiento aparente, de este a oeste, determina el día y la noche, dando la impresión que el sol gira alrededor del planeta. Este movimiento “aparente” del sol respecto de la tierra puede observarse a lo largo del día y del año. En verano, el sol se encuentra en la posición más alta, por lo que los rayos solares deben atravesar una menor distancia dentro de la atmósfera, haciendo que la variación espectral sea menor a la producida en invierno, dónde el sol debe atravesar una mayor distancia. Lo mismo ocurre durante el día, cuando el sol recorre una mayor distancia al estar más cercano al horizonte (amanecer y atardecer) y una menor distancia al medio día.</p>
+              <p>Tabla de coeficiente de rendimiento donde vemos las perdidas estimadas. Se redondea a 0.79.</p>
+               <center><img src="./Tabla.png"> </center>
+
             </div>
             <input type="number" id="input3" value="0.79" disabled>
             <label for="input3">Coef. de Rendimiento</label>
         </div>
         <div class="input-container">
             <div class="column-text">
-                <p>La primera referencia tomada por el hombre fue el sol, cuyo movimiento aparente, de este a oeste, determina el día y la noche, dando la impresión que el sol gira alrededor del planeta. Este movimiento “aparente” del sol respecto de la tierra puede observarse a lo largo del día y del año. En verano, el sol se encuentra en la posición más alta, por lo que los rayos solares deben atravesar una menor distancia dentro de la atmósfera, haciendo que la variación espectral sea menor a la producida en invierno, dónde el sol debe atravesar una mayor distancia. Lo mismo ocurre durante el día, cuando el sol recorre una mayor distancia al estar más cercano al horizonte (amanecer y atardecer) y una menor distancia al medio día.</p>
+              <p>A continuación colocar la irradiación de la zona donde vamos a instalar los paneles solares.</p>
+              <p> En <a href="https://www.energizar.org.ar/inicio/" target="_blank" rel="noreferrer noopener">esta pagina</a> obtener la irradiación colocando la latitud y longitud del lugar.</p>
+              <p> En deberemos saber la inclinación que vamos a usar en nuestros paneles solares para lograr un cálculo más exacto. </p>
+              <p>Una ves obtenido el valor de la irradiación, podremos colocarlo aquí debajo para el calculo final.</p>
+              <p>Una ves obtenido el valor de la irradiación, podremos colocarlo aquí debajo para el calculo final.</p>
             </div>
             <input type="number" id="input1" step="0.01">
             <label for="input1">KWh</label>
