--- a/index.html
+++ b/index.html
@@ -12,9 +12,9 @@
     <div class="containerr">
         <div class="input-container">
             <div class="column-text">
-                <h3 style="text-align: center;">Facturación anual</h3>
+                <h3 style="text-align: center;">Potencia facturada</h3>
                 <p>Lo primero que debemos hacer es saber cuanto es el consumo anual de nuestro hogar para así calcular la potencia que tendrán que entregar los paneles solares.
-                    <p>Para esto nos fijaremos en la factura de nuestra compañía eléctrica (el consumo de enero a diciembre) y las sumaremos.</p>
+                    <p>Para esto nos fijaremos en la factura de nuestra companía eléctrica (el consumo de enero a diciembre) y las sumaremos.</p>
                     <p>Si no tenemos todas las facturas, también podemos agregar un valor estimado de cada mes o un valor promedio. </p>
                     <h3 style="text-align: center;">Obtener el 40%</h3>
                     <p>Una ves que tengamos el consumo anual en KWh, debemos obtener el 40% para estimar el consumo durante las horas de sol.</p>
@@ -77,7 +77,7 @@
             </div>
               
         </div>
-        <h2 class="energy-label">Facturacion Anual</h2>
+        <h2 class="energy-label">Potencia facturada</h2>
 
         <div id="resultado2" class="resultado3" >-</div>
     <div class="resultadok">
@@ -92,32 +92,33 @@
     <h1>Potencia de paneles</h1>
     <div class="container">
         <div class="input-container">
-            <div class="column-text">
+            <div class="column-text2">
                 <p>A continuación colocar la irradiación de la zona donde vamos a instalar los paneles solares.</p>
-                  <p> En <a href="https://www.energizar.org.ar/inicio/" target="_blank" rel="noreferrer noopener">esta pagina</a> obtener la irradiación colocando la latitud y longitud del lugar.</p>
+                  <p> En <a href="https://insolacion.energizar.org.ar/" target="_blank" rel="noreferrer noopener">esta pagina</a> obtener la irradiación colocando la latitud y longitud del lugar.</p>
                   <p> En deberemos saber la inclinación que vamos a usar en nuestros paneles solares para lograr un cálculo más exacto. 
                   <p>Una ves obtenido el valor de la irradiación, podremos colocarlo aquí debajo para el calculo final.</p>
-                  <p>Una ves obtenido el valor de la irradiación, podremos colocarlo aquí debajo para el calculo final.</p>
+                  <p>Para sacar la Radiacion anual tendremos que multiplicar el "AnnualAverage" por 365.</p>
                   </div>
             <input type="number" id="input2" step="0.01">
             <label for="input2">Radiación Anual</label>
         </div>
         <div class="input-container">
-            <div class="column-text">
+            <div class="column-text2">
               <p>Tabla de coeficiente de rendimiento donde vemos las perdidas estimadas. Se redondea a 0.79.</p>
-               <center><img src="./Tabla.png"> </center>
+              <center><img src="./Tabla.png"> </center>
+              <p>Se redondea a 0.79</p>
 
             </div>
             <input type="number" id="input3" value="0.79" disabled>
             <label for="input3">Coef. de Rendimiento</label>
         </div>
         <div class="input-container">
-            <div class="column-text">
-              <p>A continuación colocar la irradiación de la zona donde vamos a instalar los paneles solares.</p>
-              <p> En <a href="https://www.energizar.org.ar/inicio/" target="_blank" rel="noreferrer noopener">esta pagina</a> obtener la irradiación colocando la latitud y longitud del lugar.</p>
-              <p> En deberemos saber la inclinación que vamos a usar en nuestros paneles solares para lograr un cálculo más exacto. </p>
-              <p>Una ves obtenido el valor de la irradiación, podremos colocarlo aquí debajo para el calculo final.</p>
-              <p>Una ves obtenido el valor de la irradiación, podremos colocarlo aquí debajo para el calculo final.</p>
+           <div class="column-text2"> 
+            <p>Si ya tenemos la “Radiación Anual” y el coeficiente de rendimiento en 0.79</p>
+            <p>Solo nos resta ir probando distintas potencias en KWh para acercarnos al valor de la potencia requerida por nuestro hogar.</p>  
+            <p>Si tenemos el resultado en Wh, deberemos dividirlo por 1000 para pasarlo a KWh. Ejemplo 5600Wh = 5.6Kwh.</p>                  
+            <p>Esta potencia sera las que nos guiara en la compra de los paneles solares y el inversor.</p>                  
+            <p>Coloque aqui debajo el valor en Kwh de la potencia estimada para compararlo con el 40% de nuestra potencia facturada.</p>        
             </div>
             <input type="number" id="input1" step="0.01">
             <label for="input1">KWh</label>
