--- a/index.html
+++ b/index.html
@@ -1,12 +1,12 @@
 <!DOCTYPE html>
 <html>
-<head>
+<head>    
     <title>Calculador Solar</title>
-    <link rel="stylesheet" href="styles.css">
+    <link rel="stylesheet" href="./css/styles.css">
 </head>
 <body>
     <div class="logo-container">
-        <img src="CAJA.png" alt="Logo" class="logo">
+        <img src="./images/CAJA.png" alt="Logo" class="logo">
     </div>
     <h1>Calculadora Solar</h1>
     <div class="containerr">
@@ -105,7 +105,7 @@
         <div class="input-container">
             <div class="column-text2">
               <p>A continuación, se presenta una tabla de coeficiente de rendimiento que muestra las pérdidas estimadas.</p>
-              <center><img src="./Tabla.png"> </center>
+              <center><img src="./images/Tabla.png"> </center>
               <p>Se redondea a 0.79</p>
 
             </div>
@@ -131,6 +131,6 @@
     KWh Anuales
 </div>
 
-    <script src="script.js"></script>
+    <script src="./js/script.js"></script>
 </body>
 </html>
