--- a/index.html
+++ b/index.html
@@ -131,9 +131,13 @@
             <input type="number" id="input2" step="0.01">
             <label for="input2">Radiación Anual</label>
           </div>
+        </div>
+        <div class="container">
           <div class="input-container">
+
             <div class="column-text2">
-              <p>A continuación, se presenta una tabla de coeficiente de rendimiento que muestra las pérdidas estimadas.
+              <p>A continuación, se presenta una tabla de coeficiente de rendimiento que muestra las pérdidas
+                estimadas.
               </p>
               <center><img src="./images/Tabla.png"> </center>
               <p>Se redondea a 0.79</p>
@@ -142,12 +146,18 @@
             <input type="number" id="input3" value="0.79" disabled>
             <label for="input3">Coef. de Rendimiento</label>
           </div>
+
+        </div>
+        <div class="container">
           <div class="input-container">
+
             <div class="column-text2">
-              <p>Si ya disponemos de la "Radiación Anual" y el coeficiente de rendimiento en 0.79, únicamente nos queda
+              <p>Si ya disponemos de la "Radiación Anual" y el coeficiente de rendimiento en 0.79, únicamente nos
+                queda
                 probar diferentes potencias en (kWh) para acercarnos al valor de potencia requerida por nuestro hogar.
               </p>
-              <p>En caso de que obtengamos el resultado en (Wh), deberemos dividirlo por 1000 para convertirlo a (kWh).
+              <p>En caso de que obtengamos el resultado en (Wh), deberemos dividirlo por 1000 para convertirlo a
+                (kWh).
                 Por ejemplo, 5600 Wh equivale a 5.6 kWh.</p>
               <p>Esta potencia nos servirá como guía para la adquisición de paneles solares y el inversor
                 correspondiente.</p>
