--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
     </div>
   </div>
   <hr>
-  <div class="container">
+  <div>
     <div class="input-container">
       <u>
         <h1>Calculadora Solar</h1>
@@ -49,54 +49,55 @@
         <div class="container">
           <div class="input-group">
             <input type="number" id="input4" step="0.01">
-            <label for="input4">Mes 1</label>
+            <label for="input4" style="color: rgb(0, 0, 0); ">Mes 1</label>
           </div>
-          <div class="input-group">
+          <div class=" input-group">
             <input type="number" id="input5" step="0.01">
-            <label for="input5">Mes 2</label>
+            <label for="input5" style="color: rgb(0, 0, 0);">Mes 2</label>
           </div>
-          <div class="input-group">
+          <div class=" input-group">
             <input type="number" id="input6" step="0.01">
-            <label for="input6">Mes 3</label>
+            <label for="input6" style="color: rgb(0, 0, 0); ">Mes 3</label>
           </div>
-          <div class="input-group">
+          <div class=" input-group">
             <input type="number" id="input7" step="0.01">
-            <label for="input7">Mes 4</label>
+            <label for="input7" style="color: rgb(0, 0, 0);">Mes 4</label>
           </div>
+
           <div class="input-group">
             <input type="number" id="input8" step="0.01">
-            <label for="input8">Mes 5</label>
+            <label for="input8" style="color: rgb(0, 0, 0);">Mes 5</label>
           </div>
           <div class="input-group">
             <input type="number" id="input9" step="0.01">
-            <label for="input9">Mes 6</label>
+            <label for="input9" style="color: rgb(0, 0, 0);">Mes 6</label>
           </div>
         </div>
         <div class="input-container">
           <div class="container">
             <div class="input-group">
               <input type="number" id="input10" step="0.01">
-              <label for="input10">Mes 7</label>
+              <label for="input10" style="color: rgb(0, 0, 0);">Mes 7</label>
             </div>
             <div class="input-group">
               <input type="number" id="input11" step="0.01">
-              <label for="input11">Mes 8</label>
+              <label for="input11" style="color: rgb(0, 0, 0);">Mes 8</label>
             </div>
             <div class="input-group">
               <input type="number" id="input12" step="0.01">
-              <label for="input12">Mes 9</label>
+              <label for="input12" style="color: rgb(0, 0, 0);">Mes 9</label>
             </div>
             <div class="input-group">
               <input type="number" id="input13" step="0.01">
-              <label for="input13">Mes 10</label>
+              <label for="input13" style="color: rgb(0, 0, 0);">Mes 10</label>
             </div>
             <div class="input-group">
               <input type="number" id="input14" step="0.01">
-              <label for="input14">Mes 11</label>
+              <label for="input14" style="color: rgb(0, 0, 0);">Mes 11</label>
             </div>
             <div class="input-group">
               <input type="number" id="input15" step="0.01">
-              <label for="input15">Mes 12</label>
+              <label for="input15" style="color: rgb(0, 0, 0);">Mes 12</label>
             </div>
           </div>
 
@@ -129,7 +130,7 @@
               <p>Para obtener la radiación anual, multiplicaremos el valor de "AnnualAverage" por 365.</p>
             </div>
             <input type="number" id="input2" step="0.01">
-            <label for="input2">Radiación Anual</label>
+            <label for="input2" style="color: rgb(0, 0, 0);">Radiación Anual</label>
           </div>
         </div>
         <div class="container">
@@ -144,7 +145,7 @@
 
             </div>
             <input type="number" id="input3" value="0.79" disabled>
-            <label for="input3">Coef. de Rendimiento</label>
+            <label for="input3" style="color: rgb(0, 0, 0);">Coef. de Rendimiento</label>
           </div>
 
         </div>
@@ -165,7 +166,7 @@
                 potencia facturada.</p>
             </div>
             <input type="number" id="input1" step="0.01">
-            <label for="input1">KWh</label>
+            <label for="input1" style="color: rgb(0, 0, 0);">KWh</label>
           </div>
         </div>
 
