--- a/index.html
+++ b/index.html
@@ -117,7 +117,7 @@
         <h1>Potencia de paneles</h1>
         <div class="container">
           <div class="input-container">
-            <div class="column-text2">
+            <div class="column-text">
               <p>A continuación, debemos proporcionar la irradiación de la zona donde planeamos instalar los paneles
                 solares.</p>
               <p>Para obtener la irradiación, es necesario acceder a <a href="https://insolacion.energizar.org.ar/"
@@ -136,7 +136,7 @@
         <div class="container">
           <div class="input-container">
 
-            <div class="column-text2">
+            <div class="column-text">
               <p>A continuación, se presenta una tabla de coeficiente de rendimiento que muestra las pérdidas
                 estimadas.
               </p>
@@ -152,7 +152,7 @@
         <div class="container">
           <div class="input-container">
 
-            <div class="column-text2">
+            <div class="column-text">
               <p>Si ya disponemos de la "Radiación Anual" y el coeficiente de rendimiento en 0.79, únicamente nos
                 queda
                 probar diferentes potencias en (kWh) para acercarnos al valor de potencia requerida por nuestro hogar.
